--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "youtube-search-api": "^1.2.2",
+    "youtube-url": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
